--- a/package.json
+++ b/package.json
@@ -9,23 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "nativewind": "^2.0.11",
-    "@react-navigation/native": "^6.1.7",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-safe-area-context": "^4.6.3",
-    "react-native-screens": "~3.22.0",
+    "@arelstone/react-native-swipe-button": "^0.3.0",
     "@expo/vector-icons": "^13.0.0",
+    "@gorhom/bottom-sheet": "^4.6.1",
+    "@react-navigation/native": "^6.1.7",
+    "expo": "~49.0.11",
+    "expo-checkbox": "~2.4.0",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
+    "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
-    "react-dom": "18.2.0",
-    "react-native-web": "~0.19.6",
-    "expo": "~49.0.11",
-    "expo-status-bar": "~1.6.0",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-reanimated": "~3.3.0"
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-maps": "1.7.1",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "^4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
